...
    "calculators.placeholder.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Calculators"
          }
        }
      }
    },
    "calculators.recentlyUsed" : {
      "extractionState" : "manual",
...
    "guides.placeholder.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guides"
          }
        }
      }
    },
    "guides.reader.bookmark" : {

...
            "state" : "translated",
            "value" : "Coming Soon"
          }
        }
      }
    },
    "Settings" : {

    },
    "settings.about.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
...
    "tab.salary" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Salary"
          }
        }
      }
    },
    "tab.salary.hint" : {
      "extractionState" : "manual",
...
